chore: update npm pck and solve some past AOC

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -11,6 +11,8 @@
     "resolveJsonModule": true,
     "skipLibCheck": true,
     "forceConsistentCasingInFileNames": true,
+    "sourceMap": true,
+    "outDir": "./dist"
   },
   "include": ["solutions/**/*", "server.ts"],
   "exclude": ["node_modules"]
